[build-system]
requires = [
    "scikit-build-core>=0.10",
    "Cython"
]
build-backend = "scikit_build_core.build"

[project]
name = "pocketsphinx"
version = "5.1.0rc2"
description = "Official Python bindings for PocketSphinx"
readme = "cython/README.md"
authors = [
        {name = "David Huggins-Daines", email = "dhdaines@gmail.com"}
]
keywords = ["asr", "speech"]
dependencies = ["sounddevice"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[project.urls]
Homepage = "https://github.com/cmusphinx/pocketsphinx"
Documentation = "https://pocketsphinx.readthedocs.io/en/latest/"
Repository = "https://github.com/cmusphinx/pocketsphinx.git"
Issues = "https://github.com/cmusphinx/pocketsphinx/issues"

[project.scripts]
pocketsphinx_lm = "pocketsphinx.lm:main"

[tool.cibuildwheel]
# Build PyPy
enable = [ "pypy" ]
# Build a reduced selection of binaries as there are tons of them
build = [
      "cp311-*",
      "cp313-*",
]
# Build only universal wheels for Mac where possible, and skip 32-bit
# builds to avoid building a gigabyte of stuff all the time
skip = [
     "cp*-macosx_x86_64",
     "cp*-macosx_arm64",
     "*_i686",
     "*-win32",
]

[tool.cibuildwheel.macos]
archs = ["x86_64", "universal2", "arm64"]

[tool.isort]
profile = "black"

[tool.flake8]
extend-ignore = "E203"
max-line-length = "88"

[tool.scikit-build]
minimum-version = "build-system.requires"
build.verbose = true
logging.level = "INFO"
wheel.packages = ["cython/pocketsphinx"]

# boilerplate from the bump-my-version docs!
[tool.bumpversion]
parse = """(?x)
    (?P<major>0|[1-9]\\d*)\\.
    (?P<minor>0|[1-9]\\d*)\\.
    (?P<patch>0|[1-9]\\d*)
    (?:
        (?P<pre_l>[a-zA-Z-]+)         # pre-release label
        (?P<pre_n>0|[1-9]\\d*)        # pre-release version number
    )?                                # pre-release section is optional
"""
serialize = [
    "{major}.{minor}.{patch}{pre_l}{pre_n}",
    "{major}.{minor}.{patch}",
]

[[tool.bumpversion.files]]
filename = "CMakeLists.txt"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]

[[tool.bumpversion.files]]
filename = "cython/README.md"

[[tool.bumpversion.files]]
filename = "docs/source/conf.py"

[[tool.bumpversion.files]]
filename = "doxygen/CMakeLists.txt"

[[tool.bumpversion.files]]
filename = "README.md"

[[tool.bumpversion.files]]
filename = "include/pocketsphinx.h"

[tool.bumpversion.parts.pre_l]
values = ["rc", "final"]
optional_value = "final"
