[metadata]
name = pocketsphinx5
version = 5.0.0rc0
description = Official Python bindings for PocketSphinx5
long_description = file: README.md
long_description_content_type = text/markdown
author = David Huggins-Daines
author_email = dhdaines@gmail.com
license = MIT
platforms = any
url = https://github.com/cmusphinx/pocketsphinx
project_urls =
    Source  = https://github.com/cmusphinx/pocketsphinx
    Tracker = https://github.com/cmusphinx/pocketsphinx/issues
keywords = 
classifiers =
