[metadata]
name = pocketsphinx
version = 5.0.0
description = Official Python bindings for PocketSphinx
long_description = file: cython/README.md
long_description_content_type = text/markdown
author = David Huggins-Daines
author_email = dhdaines@gmail.com
license = MIT
platforms = any
url = https://github.com/cmusphinx/pocketsphinx
project_urls =
    Source  = https://github.com/cmusphinx/pocketsphinx
    Tracker = https://github.com/cmusphinx/pocketsphinx/issues
keywords = asr, speech
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[isort]
profile=black
[flake8]
extend-ignore = E203
max-line-length = 88
