install(FILES
  pocketsphinx/cmdln_macro.h
  pocketsphinx/ps_search.h
  pocketsphinx/export.h
  pocketsphinx/ps_lattice.h
  pocketsphinx/ps_mllr.h
  pocketsphinx.h
  sphinxbase/f2c.h
  sphinxbase/hash_table.h
  sphinxbase/profile.h
  sphinxbase/byteorder.h
  sphinxbase/filename.h
  sphinxbase/logmath.h
  sphinxbase/genrand.h
  sphinxbase/sbthread.h
  sphinxbase/listelem_alloc.h
  sphinxbase/clapack_lite.h
  sphinxbase/fixpoint.h
  sphinxbase/sphinxbase_export.h
  sphinxbase/bio.h
  sphinxbase/bitvec.h
  sphinxbase/priority_queue.h
  sphinxbase/glist.h
  sphinxbase/prim_type.h
  sphinxbase/agc.h
  sphinxbase/yin.h
  sphinxbase/pio.h
  sphinxbase/err.h
  sphinxbase/cmd_ln.h
  sphinxbase/fsg_model.h
  sphinxbase/strfuncs.h
  sphinxbase/feat.h
  sphinxbase/ckd_alloc.h
  sphinxbase/heap.h
  sphinxbase/mmio.h
  sphinxbase/fe.h
  sphinxbase/cmn.h
  sphinxbase/case.h
  sphinxbase/jsgf.h
  sphinxbase/bitarr.h
  sphinxbase/matrix.h
  sphinxbase/ngram_model.h
  DESTINATION include)
