pkginclude_HEADERS = \
	basic_types.h				\
	bin_mdef.h				\
	blkarray_list.h				\
	cache_lm.h				\
	cmdln_macro.h				\
	dict.h					\
	fbs.h					\
	fsg_history.h				\
	fsg_lextree.h				\
	fsg_psubtree.h				\
	fsg_search.h				\
	hmm.h                                   \
	kb.h					\
	kdtree.h				\
	lm_3g.h					\
	lmclass.h				\
	lm.h					\
	log.h					\
	magic.h					\
	mdef.h					\
	phone.h					\
	posixwin32.h				\
	s2_semi_mgau.h				\
	s2io.h					\
	s2params.h				\
	s2types.h				\
	search_const.h				\
	search.h				\
	senscr.h				\
	subvq_mgau.h				\
	tmat.h					\
	vector.h				\
	word_fsg.h


EXTRA_DIST = \
	README
