enusdir = $(datadir)/@PACKAGE@/model/en-us/en-us
dist_enus_DATA = \
	en-us/en-us/feat.params \
	en-us/en-us/variances \
	en-us/en-us/transition_matrices \
	en-us/en-us/README \
	en-us/en-us/noisedict \
	en-us/en-us/sendump \
	en-us/en-us/mdef \
	en-us/en-us/means

enuslmdir = $(datadir)/@PACKAGE@/model/en-us
dist_enuslm_DATA = \
	en-us/cmudict-en-us.dict \
	en-us/en-us-phone.lm.bin \
	en-us/en-us.lm.bin
