SUBDIRS = unit regression

EXTRA_DIST = \
	compare_table.pl \
	testfuncs_cygwin.sh \
	word_align.pl \
	data/an4_ci_cont/feat.params \
	data/an4_ci_cont/mdef \
	data/an4_ci_cont/means \
	data/an4_ci_cont/mixture_weights \
	data/an4_ci_cont/noisedict \
	data/an4_ci_cont/transition_matrices \
	data/an4_ci_cont/variances \
	data/cards/001.wav \
	data/cards/002.wav \
	data/cards/003.wav \
	data/cards/004.wav \
	data/cards/005.wav \
	data/cards/cards.fileids \
	data/cards/cards.gram \
	data/cards/cards.hyp \
	data/cards/cards.transcription \
	data/defective.gram \
	data/defective.dic \
	data/goforward.fsg \
	data/goforward.gram \
	data/goforward.raw \
	data/goforward.kws \
	data/goforward.mfc \
	data/mllr_matrices \
	data/numbers.raw \
	data/something.raw \
	data/test.lmctl \
	data/tidigits/dhd.2934z.raw \
	data/tidigits/man.ah.111a.mfc \
	data/tidigits/man.ah.1b.mfc \
	data/tidigits/man.ah.2934za.mfc \
	data/tidigits/man.ah.35oa.mfc \
	data/tidigits/man.ah.3oa.mfc \
	data/tidigits/man.ah.4625a.mfc \
	data/tidigits/man.ah.588zza.mfc \
	data/tidigits/man.ah.63a.mfc \
	data/tidigits/man.ah.6o838a.mfc \
	data/tidigits/man.ah.75913a.mfc \
	data/tidigits/man.ah.844o1a.mfc \
	data/tidigits/man.ah.8b.mfc \
	data/tidigits/man.ah.9b.mfc \
	data/tidigits/man.ah.o789a.mfc \
	data/tidigits/man.ah.z4548a.mfc \
	data/tidigits/man.ah.zb.mfc \
	data/tidigits/test-tidigits-fsg.match \
	data/tidigits/test-tidigits-simple.match \
	data/tidigits/tidigits.ctl \
	data/tidigits/tidigits.lsn \
	data/tidigits/woman.ak.1b.mfc \
	data/tidigits/woman.ak.276317oa.mfc \
	data/tidigits/woman.ak.334a.mfc \
	data/tidigits/woman.ak.3z3z9a.mfc \
	data/tidigits/woman.ak.48z66zza.mfc \
	data/tidigits/woman.ak.532a.mfc \
	data/tidigits/woman.ak.5z874a.mfc \
	data/tidigits/woman.ak.6728za.mfc \
	data/tidigits/woman.ak.75a.mfc \
	data/tidigits/woman.ak.84983a.mfc \
	data/tidigits/woman.ak.8a.mfc \
	data/tidigits/woman.ak.99731a.mfc \
	data/tidigits/woman.ak.o69a.mfc \
	data/tidigits/woman.ak.ooa.mfc \
	data/tidigits/woman.ak.za.mfc \
	data/tidigits/hmm/feat.params \
	data/tidigits/hmm/variances \
	data/tidigits/hmm/transition_matrices \
	data/tidigits/hmm/sendump \
	data/tidigits/hmm/mdef \
	data/tidigits/hmm/means \
	data/tidigits/lm/tidigits.dic \
	data/tidigits/lm/tidigits.lm.bin \
	data/tidigits/lm/tidigits.fsg \
	data/turtle.dic \
	data/turtle.lm.bin \
	data/unreachable.lat \
	data/librivox/fileids \
	data/librivox/sense_and_sensibility_01_austen_64kb-0880.wav \
	data/librivox/sense_and_sensibility_01_austen_64kb-0890.wav \
	data/librivox/sense_and_sensibility_01_austen_64kb-0930.wav \
	data/librivox/sense_and_sensibility_01_austen_64kb-0870.wav \
	data/librivox/sense_and_sensibility_01_austen_64kb-0920.wav \
	data/librivox/transcription \
	data/librivox/test-lm.match
