hmmdir = $(prefix)/share/pocketsphinx/model/hmm

hmmfiles = en/tidigits/feat.params					\
	en/tidigits/mdef						\
	en/tidigits/means						\
	en/tidigits/sendump						\
	en/tidigits/transition_matrices					\
	en/tidigits/variances						\
	en_US/hub4wsj_sc_8k/feat.params					\
	en_US/hub4wsj_sc_8k/mdef					\
	en_US/hub4wsj_sc_8k/means					\
	en_US/hub4wsj_sc_8k/mixture_weights				\
	en_US/hub4wsj_sc_8k/noisedict					\
	en_US/hub4wsj_sc_8k/sendump					\
	en_US/hub4wsj_sc_8k/transition_matrices				\
	en_US/hub4wsj_sc_8k/variances					\
	en_US/wsj_sc_8k/feat.params					\
	en_US/wsj_sc_8k/mdef						\
	en_US/wsj_sc_8k/means						\
	en_US/wsj_sc_8k/noisedict					\
	en_US/wsj_sc_8k/sendump						\
	en_US/wsj_sc_8k/transition_matrices				\
	en_US/wsj_sc_8k/variances					\
	zh/mandarin_sc3_notone_3s_8k.cd_semi_5000/feat.params		\
	zh/mandarin_sc3_notone_3s_8k.cd_semi_5000/mdef			\
	zh/mandarin_sc3_notone_3s_8k.cd_semi_5000/means			\
	zh/mandarin_sc3_notone_3s_8k.cd_semi_5000/noisedict		\
	zh/mandarin_sc3_notone_3s_8k.cd_semi_5000/sendump		\
	zh/mandarin_sc3_notone_3s_8k.cd_semi_5000/transition_matrices	\
	zh/mandarin_sc3_notone_3s_8k.cd_semi_5000/variances

hmm_DATA = $(hmmfiles)
EXTRA_DIST = $(hmmfiles)


