tidigitsdir = $(prefix)/share/pocketsphinx/model/hmm/en/tidigits
tidigits_DATA = en/tidigits/feat.params		\
	en/tidigits/mdef			\
	en/tidigits/means			\
	en/tidigits/sendump			\
	en/tidigits/transition_matrices		\
	en/tidigits/variances

hub4dir = $(prefix)/share/pocketsphinx/model/hmm/en_US/hub4wsj_sc_8k
hub4_DATA = \
	en_US/hub4wsj_sc_8k/feat.params		\
	en_US/hub4wsj_sc_8k/mdef		\
	en_US/hub4wsj_sc_8k/means		\
	en_US/hub4wsj_sc_8k/noisedict		\
	en_US/hub4wsj_sc_8k/sendump		\
	en_US/hub4wsj_sc_8k/transition_matrices	\
	en_US/hub4wsj_sc_8k/variances

tdtdir = $(prefix)/share/pocketsphinx/model/hmm/zh/tdt_sc_8k
tdt_DATA = \
	zh/tdt_sc_8k/feat.params		\
	zh/tdt_sc_8k/mdef			\
	zh/tdt_sc_8k/means			\
	zh/tdt_sc_8k/noisedict			\
	zh/tdt_sc_8k/sendump			\
	zh/tdt_sc_8k/transition_matrices	\
	zh/tdt_sc_8k/variances

EXTRA_DIST = $(tidigits_DATA) $(hub4_DATA) $(tdt_DATA)


